# toy-git-rs

./: .gitignore  Cargo.toml
libtoygit/: Cargo.toml
libtoygit/src/: gref.rs  key_val_msg.rs  lib.rs  log.rs
toygit/: Cargo.toml
toygit/src/: main.rs
