[package]
name = "libtoygit"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
tini = "0.2.0"
sha1 = { version = "0.6.0", features = ["std"] }
libflate = "0.1.25"
indexmap = "1.0.2"
regex = "1.5.5"
itertools = "0.8.0"
log = "0.4.7"
chrono = "0.4.7"
walkdir = "2.2.9"
hex = "0.3.2"
